sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:13: error: not found: value to
		for ( i <-  to fin ){
                            ^